syntax = "proto3";

package request;

option go_package = "github.com/dmirou/otusgo/calendar/pkg/contracts/request";

import "google/protobuf/timestamp.proto";

message ByID {
    string id = 1;
}

message ByDate {
    google.protobuf.Timestamp date = 1;
}